🚧 external events  add logic

--- a/src/app/main/pages/quality/external-events/external-events.component.html
+++ b/src/app/main/pages/quality/external-events/external-events.component.html
@@ -14,7 +14,7 @@
                    
                     <mat-form-field appearance="outline" id="result" class="container-form__area">
                         <mat-label>Descripcion</mat-label>
-                          <input  matInput type="number" placeholder="Descripcion" formControlName="description"                         
+                          <input  matInput type="text" placeholder="Descripcion" formControlName="description"                         
                           >
                         <mat-error *ngIf="externalForm.controls['description'].errors">
                             Campo <strong>requerido.</strong>
@@ -34,7 +34,7 @@
 
                         <mat-form-field appearance="outline" id="result" class="container-form__work--input">
                             <mat-label>Componente</mat-label>
-                            <input matInput type="number" placeholder="Component" formControlName="component" />
+                            <input matInput type="text" placeholder="Component" formControlName="component" />
                             <mat-error *ngIf="externalForm.controls['component'].errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
@@ -42,15 +42,15 @@
 
                         <mat-form-field appearance="outline" id="result" class="container-form__work--input">
                             <mat-label> Numero de paqueteo</mat-label>
-                            <input matInput type="number" placeholder="Numero de paqueteo" formControlName="componentHourMeter" />
-                            <mat-error *ngIf="externalForm.controls['componentHourMeter'].errors">
+                            <input matInput type="number" placeholder="Numero de paqueteo" formControlName="nPackage" />
+                            <mat-error *ngIf="externalForm.controls['nPackage'].errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
                         </mat-form-field>
 
                         <mat-form-field appearance="outline" id="result" class="container-form__work--input">
                             <mat-label> Horometro de componente</mat-label>
-                            <input matInput type="number" placeholder="Horometro de componente" formControlName="componentHourMeter" />
+                            <input matInput type="text" placeholder="Horometro de componente" formControlName="componentHourMeter" />
                             <mat-error *ngIf="externalForm.controls['componentHourMeter'].errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
@@ -66,7 +66,7 @@
 
                         <mat-form-field appearance="outline" id="result" class="container-form__work--input">
                             <mat-label> Operacion minera</mat-label>
-                            <input matInput type="number" placeholder="Operacion minera" formControlName="miningOperation" />
+                            <input matInput type="text" placeholder="Operacion minera" formControlName="miningOperation" />
                             <mat-error *ngIf="externalForm.controls['miningOperation'].errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
@@ -77,7 +77,7 @@
                     <br />
                     <mat-form-field appearance="outline" id="result" class="container-form__area">
                         <mat-label>1 ¿Cuentame que sucedió?</mat-label>
-                          <input  matInput type="number" placeholder="Bahia" formControlName="question1"                         
+                          <input  matInput type="text" placeholder="Bahia" formControlName="question1"                         
                           >
                         <mat-error *ngIf="externalForm.controls['question1'].errors">
                             Campo <strong>requerido.</strong>
@@ -86,7 +86,7 @@
                     <br> 
                     <mat-form-field appearance="outline" id="result" class="container-form__area">
                         <mat-label>2. ¿Qué acciones de corrección se realizaron para solucionar el problema?</mat-label>
-                          <input  matInput type="number" placeholder="Bahia" formControlName="question2"                         
+                          <input  matInput type="text" placeholder="Bahia" formControlName="question2"                         
                           >
                         <mat-error *ngIf="externalForm.controls['question2'].errors">
                             Campo <strong>requerido.</strong>
@@ -95,7 +95,7 @@
                     <br> 
                     <mat-form-field appearance="outline" id="result" class="container-form__area">
                         <mat-label>3. Cuál crees que fue la causa de la falla?</mat-label>
-                          <input  matInput type="number" placeholder="Bahia" formControlName="question3"                         
+                          <input  matInput type="text" placeholder="Bahia" formControlName="question3"                         
                           >
                         <mat-error *ngIf="externalForm.controls['question3'].errors">
                             Campo <strong>requerido.</strong>
@@ -104,22 +104,24 @@
                     <br> 
                     <mat-form-field appearance="outline" id="result" class="container-form__area">
                         <mat-label>4. ¿Qué recomendarias para evitar que este problema vuelva a suceder?</mat-label>
-                          <input  matInput type="number" placeholder="Bahia" formControlName="question4"                         
+                          <input  matInput type="text" placeholder="Bahia" formControlName="question4"                         
                           >
                         <mat-error *ngIf="externalForm.controls['question4'].errors">
                             Campo <strong>requerido.</strong>
                         </mat-error>
                     </mat-form-field>
-                    <br> 
+                    <br>
 
                     <h3 class="container-form__title-image">Imagen general</h3>
 
-                    <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
-                    [class.hovering]="isHovering">
-                    <p>Arrastrar imágenes</p>
+                    <div class="dropzone" appDropzone 
+                        (hovered)="toggleHoverGeneral($event)" (dropped)="onDropGeneral($event)"
+                        [class.hovering]="isHoveringGeneral">
+                        <p>Arrastrar imágenes</p>
                         <div class="file">
                             <label class="file-label">
-                                <input class="file-input" type="file" (change)="onDrop($event.target.files)">
+                                <input class="file-input" type="file" 
+                                       (change)="onDropGeneral($event.target.files)">
                                 <span class="file-cta">
                                     <span class="file-label">
                                         Seleccione una imagen
@@ -129,20 +131,23 @@
                         </div>
                     </div>
                     <h3>Uploads</h3>
-
-                    <div *ngFor="let file of files">
-                        <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)">
+                    <div *ngFor="let file of filesGeneral">
+                        <app-upload-task 
+                          [file]="file" [pathStorage]="pathStorageGeneral"
+                         (onNewImage)="addNewImageGeneral($event)">
                         </app-upload-task>
                     </div>
 
                     <h3 class="container-form__title-image">Imagen de detalle</h3>
 
-                    <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
-                    [class.hovering]="isHovering">
-                    <p>Arrastrar imágenes</p>
+                    <div class="dropzone" appDropzone (hovered)="toggleHoverDetail($event)" 
+                        (dropped)="onDropDetail($event)"
+                        [class.hovering]="isHoveringDetail">
+                        <p>Arrastrar imágenes</p>
                         <div class="file">
                             <label class="file-label">
-                                <input class="file-input" type="file" (change)="onDrop($event.target.files)">
+                                <input class="file-input" type="file" 
+                                       (change)="onDropDetail($event.target.files)">
                                 <span class="file-cta">
                                     <span class="file-label">
                                         Seleccione una imagen
@@ -153,27 +158,38 @@
                     </div>
                     <h3>Uploads</h3>
 
-                    <div *ngFor="let file of files">
-                        <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)">
+                    <div *ngFor="let file of filesDetail">
+                        <app-upload-task [file]="file" [pathStorage]="pathStorageDetail" 
+                        (onNewImage)="addNewImageDetail($event)">
                         </app-upload-task>
                     </div>
                     
                     <div class="container-form__uploadXlx">
                         <h3 class="">Archivo adicional</h3>
-                        <p style="color:#0064EA;">ZBI_OPS_ORDSER_MQH (11-52-04).xlsx </p>
-                        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
-                            id="fileInput2">
-                            <br>
-                        <button type="file" aria-label="add" mat-button class="container-form__uploadXlx--btn-add" accept=".csv,.xlsx"
-                            (click)="fileInput2.click()">
-                            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-                            ADJUNTAR 
-                        </button>
-                    </div>  
-                    
-                    <button aria-label="add" mat-button class="container-form__btn-save" >
+                        <p *ngIf="fileSelect" style="color:#0064EA;">{{nameFileSelect}} </p>
+                        <div >
+                            <input #fileInput2 style="display: none" type="file" 
+                                   id="fileInput2"
+                                   (change)="uploadFiles($event)" accept=".xls,.xlsx"
+                                   >
+                                   <br>
+                            <button type="file" aria-label="add" mat-button class="container-form__uploadXlx--btn-add"
+                                    accept=".csv,.xlsx" 
+                                (click)="fileInput2.click()">
+                                <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+                                ADJUNTAR 
+                            </button>                            
+                        </div>                                              
+                    </div>                     
+                                       
+                    <button aria-label="add" mat-button class="container-form__btn-save" 
+                    [disabled]='externalForm.invalid'
+                    (click)="save()"
+                    >
                         GUARDAR
                     </button>
+
+                    
     
                 </form>
             </div>
