--- a/src/app/main/pages/andon/dashboard/dashboard.component.scss
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.scss
@@ -162,11 +162,11 @@
 
 
 .charts{
-    margin: 20px;
+   margin-right: 20px;
 }
 
 .container-date {
-    margin-left: 30px;
+    //margin-left: 30px;
 }
 
 .title-card {
@@ -210,6 +210,8 @@
     .body-container{
         display: flex;
         flex-direction: column;
+        align-items: center;
+
     }
 
     .container1 {
@@ -298,6 +300,8 @@
     .container2 {
         width: 100%;
         margin: 5px;
+        margin-top: 20px;
+
         &__taller {
             border-radius: 30px;
             box-shadow: 0px 0px 5.66077px 5.66077px rgba(177, 175, 175, 0.25);
@@ -377,16 +381,18 @@
     .body-container{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        margin: 0px;
+        padding: 0px;
     }
     
     .container1 {
         width: 100%;
-        margin: 15px;
     
         &__problem {
             border-radius: 30px;
             box-shadow: 0px 0px 5.66077px 5.66077px rgba(177, 175, 175, 0.25);
-    
+           
             &--title {
                 text-align: center;
                 border-radius: 30px 30px 0px 0px;
@@ -401,7 +407,6 @@
             &--report {
                 background: #f9f9f9;
                 border-radius: 0px 0px 30px 30px;
-                margin: 20px;
             }
         }
         &__top {
@@ -473,6 +478,7 @@
     .container2 {
         width: 100%;
         margin: 0px;
+        margin-top: 20px;
         &__taller{
             border-radius: 30px;
             box-shadow: 0px 0px 5.66077px 5.66077px rgba(177, 175, 175, 0.25);
