--- a/src/app/main/pages/andon/reports/reports.component.scss
+++ b/src/app/main/pages/andon/reports/reports.component.scss
@@ -11,6 +11,7 @@
     &__title{
         display: flex;
         align-self: center;
+        margin-bottom: 20px;
 
         h1 {
             margin: 0px 16px 0px 0px;
@@ -20,6 +21,7 @@
     &__search{
         display: flex;
         width: 100%;
+        margin-top: 100px;
         max-width: 350px;
         border : 1px solid #D8D8D8;
         border-radius: 5px;
