--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
@@ -66,22 +66,22 @@
             align-self: center;
             border-radius: 20px 20px;
             margin-right: 15px;
-            
-            &-icon{
+
+            &-icon {
                 margin-right: 10px;
                 margin-left: 12px;
                 color: #cbcbcb;
                 width: 30px;
                 height: 35px;
             }
-            
-            &-input{
-               position: relative;
-               top: -5px;
-               font-family: "Montserrat", sans-serif;
-               color: #333333;
-               font-weight: 400;
-               width: 265px;
+
+            &-input {
+                position: relative;
+                top: -5px;
+                font-family: "Montserrat", sans-serif;
+                color: #333333;
+                font-weight: 400;
+                width: 265px;
             }
         }
 
@@ -122,11 +122,11 @@
         border-radius: 0px 30px 0px 0px;
     }
 }
-.mat-option{
+.mat-option {
     color: #333333;
 }
-.select-input{
-    color: #333333; 
+.select-input {
+    color: #333333;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
 }
@@ -277,4 +277,17 @@ input {
     line-height: 24px;
     letter-spacing: 0.15px;
     color: rgba(0, 0, 0, 0.6);
+}
+
+.tag {
+    padding: 4px 8px;
+    color: white;
+    font-weight: 700;
+    font-family: "Poppins", sans-serif;
+    border-radius: 10px;
+    margin-left: 8px;
+
+    &--priority {
+        background-color: #2196f3;
+    }
 }
