--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -6,13 +6,19 @@
     </button>
     <button type="file" aria-label="add" mat-button class="btn-add" (click)="uploadFileDialog()">
       <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-      CREAR LOTE
+      LOTE
     </button>
 
     <button aria-label="add" mat-button class="btn-add" (click)="downloadXlsx(historyDataSource.data)"
       [disabled]="historyDataSource.data.length < 1">
       <mat-icon aria-label="agregar" class="icon-add">download</mat-icon>
       DESCARGAR
+    </button>
+
+    <button aria-label="add" mat-button class="btn-add" (click)="generatePDF()"
+      [disabled]="historyDataSource.data.length < 1">
+      <mat-icon aria-label="agregar" class="icon-add">description</mat-icon>
+      REPORTE
     </button>
   </ng-container>
 
@@ -191,6 +197,10 @@
               <button class="w3-small" mat-menu-item (click)="openDialog('image', element, i)">
                 <mat-icon>add_photo_alternate</mat-icon>
                 Imágenes
+              </button>
+              <button class="w3-small" mat-menu-item (click)="generatePDF(element)">
+                <mat-icon>add_photo_alternate</mat-icon>
+                PDF
               </button>
             </mat-menu>
 
